--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -8,6 +8,8 @@ header{
     display: flex;
     flex-direction: column;
     gap: 120px;
+    box-shadow: 0px 0px 16px 1px #000000fa;
+
 
     main{
         max-width: 840px;
