--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "./block/nav.scss";
 @import "./block/header";
 @import "./block/main_top";
+@import "./block/main_center.scss";
 
 *{
     margin: 0;
