--- a/scss/block/_main_center.scss
+++ b/scss/block/_main_center.scss
@@ -22,6 +22,13 @@ main{
             padding: 0px 300px;
             text-align: center;
         }
+
+        .main-center-pagination{
+            display: flex;
+            gap: 40px;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     .main-center-desc{
