--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "./block/header";
 @import "./block/main_top";
 @import "./block/main_center.scss";
+@import "./block/main_bottom";
 
 *{
     margin: 0;
@@ -10,6 +11,19 @@
     text-decoration: none;
     list-style: none;
     font-family: sans-serif;
+}
+
+
+.global-h2{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
+}
+.global-p{
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 28.8px;
+    text-align: start;
 }
 
 .global-btn-style {
